src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>OrderApi__Work_Email_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Contact will not receive communications to their Work Email.</description>
        <inlineHelpText>Contact will not receive communications to their Work Email.</inlineHelpText>
        <label>Work Email Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Work_Email__c</fullName>
        <description>Work/Business Email for the Contact.</description>
        <inlineHelpText>Work/Business Email for the Contact.</inlineHelpText>
        <label>Work Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>OrderApi__Work_Phone__c</fullName>
        <description>The Work Phone for the Contact.</description>
        <inlineHelpText>The Work Phone for the Contact.</inlineHelpText>
        <label>Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Org_Institution_Type__c</fullName>
        <formula>Text(Account.Institution_Type__c)</formula>
        <label>Institution Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organ_Sites__c</fullName>
        <description>Organ site research area(s)</description>
        <inlineHelpText>Organ site research area(s)</inlineHelpText>
        <label>Organ Sites</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Organ_Sites_Global_Picklist</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Dietary_Needs__c</fullName>
        <description>Additional or specialized dietary needs/restrictions beyond the main field entry.</description>
        <label>Other Dietary Needs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Research_Areas__c</fullName>
        <description>This field reflects any research area not already included in the &quot;Research Areas Global Value Set&quot; in this system.</description>
        <inlineHelpText>Any research area not listed within the previous 3 fields.</inlineHelpText>
        <label>Other Research Areas</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Override_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Override By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Override_Date__c</fullName>
        <label>Override Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Override_Reason__c</fullName>
        <label>Override Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PagesApi__Cookie_Usage_Accepted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the Contact has accepted the Cookie Usage Prompt and will not be prompted again.</description>
        <inlineHelpText>When checked, the Contact has accepted the Cookie Usage Prompt and will not be prompted again.</inlineHelpText>
        <label>Cookie Usage Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PagesApi__Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Select the Site you wish to use as the default Site for the Contact.</description>
        <inlineHelpText>Select the Site you wish to use as the default Site for the Contact.</inlineHelpText>
        <label>Site</label>
        <referenceTo>PagesApi__Site__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Paid_thru_date__c</fullName>
        <description>This field will track the date upto which the customer&apos;s subscription is paid</description>
        <inlineHelpText>***SYSTEM CALCULATED***This field tracks the paid thru date of the membership</inlineHelpText>
        <label>Paid Thru Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Personal_Email_Bounced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to be referenced in Heroku Data Connect.</description>
        <label>Personal Email Bounced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pre_Post_Doc__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pre/Post Doc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Preferred_Address__c</fullName>
        <description>What is the preferred mailing address for this member?</description>
        <inlineHelpText>What is the preferred mailing address for this member?</inlineHelpText>
        <label>Preferred Address</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Business</fullName>
                    <default>true</default>
                    <label>Business</label>
                </value>
                <value>
                    <fullName>Home</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Presenter_Bio__c</fullName>
        <label>Presenter Bio</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Research_Area_of_Expertise__c</fullName>
        <description>This field reflects the single primary research area for the AACR member.</description>
        <inlineHelpText>This field reflects the single primary research area for the AACR member.</inlineHelpText>
        <label>Research Area of Expertise</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Research_Areas_Global_Value_Set</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Stakeholder_Other__c</fullName>
        <label>Primary Stakeholder Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Stakeholder__c</fullName>
        <label>Primary Stakeholder</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Patient</fullName>
                </value>
                <value>
                    <fullName>Survivor</fullName>
                </value>
                <value>
                    <fullName>Caregiver</fullName>
                </value>
                <value>
                    <fullName>Advocate</fullName>
                </value>
                <value>
                    <fullName>Researcher</fullName>
                </value>
                <value>
                    <fullName>Clinician</fullName>
                </value>
                <value>
                    <fullName>Payer</fullName>
                </value>
                <value>
                    <fullName>Industry</fullName>
                </value>
                <value>
                    <fullName>Government Agencies</fullName>
                </value>
                <value>
                    <fullName>Hospitals and Health Systems</fullName>
                </value>
                <value>
                    <fullName>Policy Maker</fullName>
                </value>
                <value>
                    <fullName>Academic/Training Institutions</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Information Technology</fullName>
                </value>
                <value>
                    <fullName>AACR Staff</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prior_Member_Status__c</fullName>
        <description>Hidden field: Ability to see movement of status between of Prior Member record type and current Member record type.</description>
        <label>Prior Member Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Professional_Role__c</fullName>
        <description>Professional role for the contact; reflects iMIS&apos; original &quot;name.functional_title&quot; field.</description>
        <inlineHelpText>Professional role for the contact. Also considered as Functional Title.</inlineHelpText>
        <label>Professional Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Health Professional</fullName>
                </value>
                <value>
                    <fullName>High School Student</fullName>
                </value>
                <value>
                    <fullName>High School Teacher</fullName>
                </value>
                <value>
                    <fullName>Independent Consultant</fullName>
                </value>
                <value>
                    <fullName>Junior Level</fullName>
                </value>
                <value>
                    <fullName>Nurse</fullName>
                </value>
                <value>
                    <fullName>Press - Journalists, Editors, Reporters, Freelance Writers, etc.</fullName>
                </value>
                <value>
                    <fullName>Primary Role - CEOs, Directors, etc.</fullName>
                </value>
                <value>
                    <fullName>Public Information Officers - Communication Managers, etc.</fullName>
                </value>
                <value>
                    <fullName>Senior Level</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RTS_Journal_Reason__c</fullName>
        <label>RTS Journal Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RTS_Mailing_Reason__c</fullName>
        <label>RTS Mailing Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RTS_Other_Reason__c</fullName>
        <label>RTS Other Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RT_ByName__c</fullName>
        <description>Get&apos;s Record Type by Name</description>
        <formula>$RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RT_ByName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Race__c</fullName>
        <description>Race of the contact.</description>
        <inlineHelpText>Race of the contact.</inlineHelpText>
        <label>Race</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>African American/Black</fullName>
                </value>
                <value>
                    <fullName>Alaskan Native</fullName>
                </value>
                <value>
                    <fullName>Asian</fullName>
                </value>
                <value>
                    <fullName>Caucasian</fullName>
                </value>
                <value>
                    <fullName>Hispanic/Latino</fullName>
                </value>
                <value>
                    <fullName>Native American</fullName>
                </value>
                <value>
                    <fullName>Native Pacific Islander/Hawaiian</fullName>
                </value>
                <value>
                    <fullName>No Answer</fullName>
                    <label>Prefer Not to Answer</label>
                </value>
                <value>
                    <fullName>Other | other</fullName>
                    <label>Other</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SSP_Title__c</fullName>
        <description>Scientific Survivor Program Title</description>
        <inlineHelpText>Member of the AM/CHD Scientist Survivor Program</inlineHelpText>
        <label>SSP Title</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SSP Advocate</fullName>
                </value>
                <value>
                    <fullName>SSP Advocate Mentor</fullName>
                </value>
                <value>
                    <fullName>SSP Scientist Mentor</fullName>
                </value>
                <value>
                    <fullName>SSP Mentor in Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Salesforce_ID__c</fullName>
        <description>Hidden field reflecting new SF ID auto-number to take over where iMIS ID leaves off.</description>
        <label>Salesforce ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Scientific_Interests__c</fullName>
        <formula>HYPERLINK(&quot;http://uat-aacr.cs195.force.com/ScientificInterests&quot;, &quot;Edit&quot;,&apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scientific Interests</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Stakeholder_Other__c</fullName>
        <label>Secondary Stakeholder Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Stakeholder__c</fullName>
        <label>Secondary Stakeholder</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Patient</fullName>
                </value>
                <value>
                    <fullName>Survivor</fullName>
                </value>
                <value>
                    <fullName>Caregiver</fullName>
                </value>
                <value>
                    <fullName>Advocate</fullName>
                </value>
                <value>
                    <fullName>Researcher</fullName>
                </value>
                <value>
                    <fullName>Clinician</fullName>
                </value>
                <value>
                    <fullName>Payer</fullName>
                </value>
                <value>
                    <fullName>Industry</fullName>
                </value>
                <value>
                    <fullName>Government Agencies</fullName>
                </value>
                <value>
                    <fullName>Hospitals and Health Systems</fullName>
                </value>
                <value>
                    <fullName>Policy Maker</fullName>
                </value>
                <value>
                    <fullName>Academic/Training Institutions</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Information Technology</fullName>
                </value>
                <value>
                    <fullName>AACR Staff</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Technology</fullName>
                    <isActive>false</isActive>
                    <label>Technology</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Specific_Research_Areas__c</fullName>
        <description>This field reflects any specialized research areas for the AACR member besides the primary area.</description>
        <inlineHelpText>This field reflects any specialized research areas for the AACR member besides the primary area.</inlineHelpText>
        <label>Specific Research Areas</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aging</fullName>
                </value>
                <value>
                    <fullName>AIDS and Cancer</fullName>
                </value>
                <value>
                    <fullName>Alkylating Agents</fullName>
                </value>
                <value>
                    <fullName>Angiogenesis</fullName>
                </value>
                <value>
                    <fullName>Animal Models</fullName>
                </value>
                <value>
                    <fullName>Antifolates</fullName>
                </value>
                <value>
                    <fullName>Antimitotic Agents</fullName>
                </value>
                <value>
                    <fullName>Antisense Oligonucleotides</fullName>
                </value>
                <value>
                    <fullName>Antiviral Therapy</fullName>
                </value>
                <value>
                    <fullName>Aromatase Inhibitors and Hormone Antagonists</fullName>
                </value>
                <value>
                    <fullName>Aromatic Amines</fullName>
                </value>
                <value>
                    <fullName>Autoradiography</fullName>
                </value>
                <value>
                    <fullName>Biochemical Modulators of Therapy and Toxicity</fullName>
                </value>
                <value>
                    <fullName>Biological Response Modifiers</fullName>
                </value>
                <value>
                    <fullName>Biomarkers</fullName>
                </value>
                <value>
                    <fullName>Bone Marrow Transplantation</fullName>
                </value>
                <value>
                    <fullName>Cachexia</fullName>
                </value>
                <value>
                    <fullName>Cancer Control and Screening</fullName>
                </value>
                <value>
                    <fullName>Cancer in Minority Populations</fullName>
                </value>
                <value>
                    <fullName>Cancer Vaccines</fullName>
                </value>
                <value>
                    <fullName>Carbohydrate Metabolism</fullName>
                </value>
                <value>
                    <fullName>Carcinogen-Gene Interactions</fullName>
                </value>
                <value>
                    <fullName>Carcinogen Metabolism and DNA-Adduct Formation</fullName>
                </value>
                <value>
                    <fullName>Cell Adhesion Molecules and Integrins</fullName>
                </value>
                <value>
                    <fullName>Cell and Tissue Culture</fullName>
                </value>
                <value>
                    <fullName>Cell and Tissue Kinetics</fullName>
                </value>
                <value>
                    <fullName>Cell Cycle Regulation</fullName>
                </value>
                <value>
                    <fullName>Cell Death (Apoptosis)</fullName>
                </value>
                <value>
                    <fullName>Chalones</fullName>
                </value>
                <value>
                    <fullName>Chemoprevention (Modulation of Carcinogenesis)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stand_Up_2_Cancer__c</fullName>
        <description>Marketing Preferences indicator</description>
        <label>Stand Up 2 Cancer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Suffix_Text__c</fullName>
        <description>Text display of picklist value of the baseline Suffix field. This is to be leveraged for the custom created &quot;Donor Roll&quot; full name display field (JAR).</description>
        <formula>TEXT(DonorApi__Suffix__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Suffix Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survivor_Advocacy__c</fullName>
        <description>Marketing Preferences indicator</description>
        <label>Survivor Advocacy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survivor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies this individual as a cancer survivor.</description>
        <inlineHelpText>Is this individual a cancer survivor?</inlineHelpText>
        <label>Survivor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tumor_Microenvironment__c</fullName>
        <description>Marketing Preferences indicator</description>
        <label>Tumor Microenvironment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unique_Contact_Counter__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unique Contact Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unverified_Email_Address__c</fullName>
        <label>Unverified Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Verify_ORCID__c</fullName>
        <formula>HYPERLINK(&quot;http://uat-aacr.cs195.force.com/VerifyORCID&quot;, &quot;Link&quot;,&apos;_blank&apos;)</formula>
        <label>Link my ORCID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Volunteer_For__c</fullName>
        <label>What would you like to volunteer for?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>WBIL_Override_Reason__c</fullName>
        <label>WBIL Override Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Women_in_Cancer_Research__c</fullName>
        <description>Marketing Preference indicator</description>
        <label>Women in Cancer Research</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Work_Email_Bounced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to be referenced in Heroku Data Connect.</description>
        <label>Work Email Bounced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Work_Setting__c</fullName>
        <description>Work setting for the contact.</description>
        <inlineHelpText>Work setting for the contact.</inlineHelpText>
        <label>Work Setting</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Academia</fullName>
                </value>
                <value>
                    <fullName>Association/Professional Organization</fullName>
                </value>
                <value>
                    <fullName>Cancer Center/Cancer Institute</fullName>
                </value>
                <value>
                    <fullName>Fundraising Organization/Foundation</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Hospital/Clinic</fullName>
                </value>
                <value>
                    <fullName>Industry/Commercial Sector</fullName>
                </value>
                <value>
                    <fullName>Oncology Practice</fullName>
                </value>
                <value>
                    <fullName>Patient Advocacy</fullName>
                </value>
                <value>
                    <fullName>Professional Membership Organization</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Working_Groups__c</fullName>
        <label>Working Groups</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>c4g_Contact_Concatenation__c</fullName>
        <formula>FirstName  &amp; &quot; &quot; &amp;  LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c4g_DS_Rating_Level__c</fullName>
        <description>Used to capture the DS Rating Level as derived by the end user from DonorSearch</description>
        <label>DS Rating Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DS 1-1</fullName>
                </value>
                <value>
                    <fullName>DS 1-2</fullName>
                </value>
                <value>
                    <fullName>DS 1-3</fullName>
                </value>
                <value>
                    <fullName>DS 1-4</fullName>
                </value>
                <value>
                    <fullName>DS 1-5</fullName>
                </value>
                <value>
                    <fullName>DS 2</fullName>
                </value>
                <value>
                    <fullName>DS 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c4g_RFM__c</fullName>
        <description>Used to capture the RFM as derived by the end user from DonorSearch</description>
        <inlineHelpText>RFM range is 1-300</inlineHelpText>
        <label>RFM</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c4g_Volunteer_Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The organization the contact is volunteering on behalf of.</description>
        <inlineHelpText>The organization the contact is volunteering on behalf of.</inlineHelpText>
        <label>Volunteer Organization</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The related account must be an organization</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Organization</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contacts (Volunteer Organization)</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cfg_Actively_Prospecting_Major_Gift__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to denote a Contact is a primary contact for a corporate sponsorship.</description>
        <label>Actively Prospecting Major Gift</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Contacts (Actively Prospecting Major Gift)</relationshipLabel>
        <relationshipName>Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cfg_Last_Donation_to_Runner_Date__c</fullName>
        <description>CFG 7/14 - this field will be automated by process builder upon the creation of an opportunity associated to a Runner/Marathon campaign.</description>
        <label>Last Donation to Runner Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cfg_Last_Runner_Date__c</fullName>
        <description>Used to capture a Contacts last fundraising date, if selected as the Runner on a Marathon campaign.</description>
        <label>Last Runner Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cfg_Prospect_Priority__c</fullName>
        <label>Prospect Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Not Priority</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ddrive__Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DD Instance</label>
        <referenceTo>ddrive__Configuration__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ddrive__Created_in_DonorDrive_By__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Created in DonorDrive By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Created_in_DonorDrive_Relationship__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Created in DonorDrive - Relationship</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Date_Entered__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Date Entered</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Company_Name__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>DonorDrive Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_ID__c</fullName>
        <externalId>true</externalId>
        <label>DonorDrive ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Type__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>DonorDrive Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Has_Extranet_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Part of DonorDrive integration</description>
        <label>Has Extranet Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ddrive__Is_Managed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Part of DonorDrive integration</description>
        <label>Is Managed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ddrive__Is_Offline__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Part of DonorDrive integration</description>
        <label>Is Offline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ddrive__Languages__c</fullName>
        <label>Languages</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Last_Modified_by_in_DonorDrive__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Last Modified by in DonorDrive</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Last_Modified_in_DonorDrive__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Last Modified in DonorDrive</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ddrive__Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ddrive__Mobile_Carrier__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Mobile Carrier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Needs_Merge_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Needs Merge Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ddrive__Receive_Texts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Part of DonorDrive integration</description>
        <label>Receive Texts</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>